--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -1,2 +1,4 @@
-<h2> Edit the Category Below </h2>
-<%= render partial: 'form' %>
+<div class="jumbotron">
+  <h2> Edit the Category Below </h2>
+  <%= render partial: 'form' %>
+</div>
