--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,8 +1,6 @@
-<h1> Select a Category to View Ideas</h1>
-
-<% @categories.each do |category| %>
-  <ul><%= link_to category.name, category_path(category) %></ul>
-<% end %>
-
-<%= link_to "Create a New Category", new_category_path %>
-<%= link_to "Contribute an Idea", new_idea_path %>
+<div class="jumbotron">
+  <h2> Select a Category to View Ideas</h2>
+  <% @categories.each do |category| %>
+    <ul><%= link_to category.name, category_path(category) %></ul>
+  <% end %>
+</div>
