--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -1,2 +1,4 @@
-<h2>What is your idea?</h2>
-<%= render partial: "form" %>
+<div class="jumbotron">
+  <h2>What is your idea?</h2>
+  <%= render partial: "form" %>
+</div>
