--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar_fixed_top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,14 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/ideas/new">Ideas</a>
+      <a class="navbar-brand" href="/">IdeaBox</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/categories">Categories</a></li>
-        <li><a href="/users/new">New Link</a></li>
+        <li><a href="/ideas/new">Ideas</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -38,7 +38,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/users/new">Create a New User</a></li>
           <% if logged_in? %>
-            <li><%= link_to "Test", user_path(User.find(session[:user_id])) %></li>
+            <li><%= link_to "#{User.find(session[:user_id]).username}", user_path(User.find(session[:user_id])) %></li>
             <li><%= link_to "Logout", logout_path, method: "delete" %></li>
           <% else %>
             <li><%= link_to "Login", login_path, :class => "nav navbar-nav navbar-right" %></li>
