--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,5 +10,5 @@
 
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
-  <%= f.submit "Create Account" %>
+  <%= f.submit "Create Account", :class => "btn btn-primary" %>
 <% end %>
